[gd_scene load_steps=5 format=2]

[ext_resource path="res://hud/gun_slot.png" type="Texture" id=1]
[ext_resource path="res://fonts/font-1-export.fnt" type="BitmapFont" id=2]
[ext_resource path="res://weapons/weapons.png" type="Texture" id=3]
[ext_resource path="res://LoadoutButton.gd" type="Script" id=4]

[node name="LoadoutButton" type="TextureButton"]
margin_right = 112.0
margin_bottom = 62.0
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 57, 31 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
hframes = 12

[node name="Label" type="Label" parent="."]
margin_top = 58.0
margin_right = 112.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 2 )
text = "SLOT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="." to="." method="_on_LoadoutButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_LoadoutButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_LoadoutButton_pressed"]
